--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-in-js": "^1.1.0",
+    "postcss-scss": "^4.0.2",
+    "stylelint": "^13.13.1",
+    "stylelint-order": "4.1"
   }
 }
